--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,12 @@
         "psr-0": {
             "BehatExtras": "src/"
         }
+    },
+    "require-dev": {
+        "behat/behat": "2.4.*@stable",
+        "behat/mink": "1.4@stable",
+        "behat/mink-goutte-driver": "*",
+        "behat/mink-extension": "*",
+        "behat/mink-selenium2-driver": "*"
     }
 }
