initial commit of inbox classes

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
             "BehatExtras": "src/"
         }
     },
+    "require": {
+        "zendframework/zend-mail": "2.1.*"
+    },
     "require-dev": {
         "behat/behat": "2.4.*@stable",
         "behat/mink": "1.4@stable",
